--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,11 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
 
+.pushButton {
+    height: 20px;
+    width: 20px;
+    background-color: green;
+}
